--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "react-hooks-bank-of-flatiron-code-challenge",
   "version": "0.1.0",
+  "homepage": "https://github.com/Matildakasiva/Phase-2-Code-Challenge---Bank-of-Flatiron",
   "private": true,
   "dependencies": {
+    "16": "^0.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "semantic-ui-css": "^2.2.10"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "json-server": "^0.15.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "PORT=8000 react-scripts start",
     "server": "json-server --watch db.json -p 8001"
   },
